made some changes

--- a/projects.html
+++ b/projects.html
@@ -67,50 +67,79 @@
         href="https://text-utils-react-js-git-main-gajananbodhankar.vercel.app/"
         target="_blank"
         class="projectTitle"
-        >TextUtils</a
+        >TEXTUTILS</a
       >
       <p>
-        Created with a passion for enhancing your text-related tasks, TextUtils
-        is designed to be your one-stop digital toolkit for all things textual.
+        Created with passion for enhancing your text-related tasks, TextUtils is
+        designed to be your one-stop digital toolkit for all things textual.
         Build with ReactJS library and Bootstrap for styling.
       </p>
-      <a
-        href="https://material-ui-reactjs.vercel.app/"
-        target="_blank"
-        class="projectTitle"
-        >ToDo-List with Backend</a
-      >
-      <p>
-        ToDoList, your go-to destination for a wide array of task to keep a note
-        of, integrated with backend which includes Express, nodeJS and mongoDB
-        as database and React library with bootstrap and material UI for the
-        front end. And a
+      <p style="font-size: x-large;margin-bottom: 5px;">
+        QTRIP
         <a
-          href="https://to-do-list-local-storage-vanilla-js.vercel.app/"
+          href="https://gajanan-qtrip.netlify.app/"
+          class="projectTitle"
           target="_blank"
-          style="color: red"
-          >ToDo-list</a
+          style="font-size: large"
         >
-        with VanillaJS with Local Storage for a browser specific tasks.
-      </p>
-      <a
-        href="https://gajanan-qtrip.netlify.app/"
-        class="projectTitle"
-        target="_blank"
-      >
-        Qtrip Static
-      </a>
-      <p>
-        A static travel website which is a personal project to illustrate my
-        work on VanillaJS, where user can explore various travel destinations
-        and furthermore, the integration with backend is done
+          Static
+        </a>
         <a
           href="https://qtrip-dynamic-one-chi.vercel.app/"
           target="_blank"
-          style="color: red"
-          >Qtrip dynamic,</a
+          class="projectTitle"
+          style="font-size: large"
+          >Dynamic</a
         >
-        with more features and enhancements.
+      </p>
+      <p>
+        A SEO friendly travel website made using HTML, CSS, BootStrap and
+        JavaScript that can be used to browse different cities and adventures
+        and make reservations. Improved UI/UX with multi-select filters, forms,
+        image carousels and conditional rendering of page elements. Utilized
+        local storage to persist user preference at client-side and facilitated
+        reservation form submission using fetch API. with more features and
+        enhancements.
+      </p>
+      <a
+        class="projectTitle"
+        target="_blank"
+        href="https://bodhankargajanan99-me-qkart-frontend-v2.vercel.app/"
+        >QKART FRONTEND</a
+      >
+      <p>
+        Implemented the core logic for authentication, shopping cart, and
+        checkout of an E-commerce application with popping messages using
+        notistack snackbar. Improved UI by adding responsive design elements for
+        a uniform experience across different devices.Utilized REST APIs to load
+        and render data served by the backend server.Loading the products, add
+        to cart, and checkout page as per authorization with search bar using
+        debouncing.
+      </p>
+
+      <a
+        href="https://github.com/GajananBodhankar/E-Commerce-Application"
+        class="projectTitle"
+        target="_blank"
+        >E-COMMERCE FOR ANDROID</a
+      >
+      <p>
+        Developed a React Native E - commerce app with user authentication
+        <a
+          href="https://fakestoreapi.com/docs"
+          class="projectTitle"
+          style="font-size: large"
+          target="_blank"
+          >credentials</a
+        >
+        , utilizing Axios for API calls and Redux for state management.
+        Designed Home screen with dynamic categories, search filters, and view
+        all feature, optimizing user product exploration. Implemented
+        efficient navigation to Product details, allowing users to add items to
+        the cart seamlessly.Utilized Flatlist for list optimization in various
+        screens, contributing to enhanced application performance.Utilized Git
+        for version control and participated in regular code reviews to ensure
+        code quality and adherence to best practices.
       </p>
     </div>
     <footer class="px-5 p-3">
