Updated footer with some background images

--- a/index.html
+++ b/index.html
@@ -78,12 +78,27 @@
           <img src="./Assets/icons8-twitterx-60.png" alt="" height="39rem" />
         </a>
       </div>
+      <div class="desktopDisplay">
+        <p style="margin: 0">
+          No &copy copyright issues.Feel free to copy.If you need any help, ping
+          me!
+        </p>
+        <p style="margin: 0">Made with ❤️ in India</p>
+      </div>
       <a
-      href="
+        href="
       https://plum-philomena-18.tiiny.site"
-      target="_blank"
-      >RESUME</a
-    >
+        target="_blank"
+        style="align-self: flex-start"
+        >RESUME</a
+      >
+      <div class="mobileDisplay" >
+        <p style="margin: 0">
+          No &copy copyright issues. Feel free to copy. If you need any help,
+          ping me !
+        </p>
+        <p style="margin: 0">Made with ❤️ in India</p>
+      </div>
     </footer>
     <script src="./index.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
