--- a/projects.html
+++ b/projects.html
@@ -74,7 +74,7 @@
         designed to be your one-stop digital toolkit for all things textual.
         Build with ReactJS library and Bootstrap for styling.
       </p>
-      <p style="font-size: x-large;margin-bottom: 5px;">
+      <p style="font-size: x-large; margin-bottom: 5px">
         QTRIP
         <a
           href="https://gajanan-qtrip.netlify.app/"
@@ -132,14 +132,14 @@
           target="_blank"
           >credentials</a
         >
-        , utilizing Axios for API calls and Redux for state management.
-        Designed Home screen with dynamic categories, search filters, and view
-        all feature, optimizing user product exploration. Implemented
-        efficient navigation to Product details, allowing users to add items to
-        the cart seamlessly.Utilized Flatlist for list optimization in various
-        screens, contributing to enhanced application performance.Utilized Git
-        for version control and participated in regular code reviews to ensure
-        code quality and adherence to best practices.
+        , utilizing Axios for API calls and Redux for state management. Designed
+        Home screen with dynamic categories, search filters, and view all
+        feature, optimizing user product exploration. Implemented efficient
+        navigation to Product details, allowing users to add items to the cart
+        seamlessly.Utilized Flatlist for list optimization in various screens,
+        contributing to enhanced application performance.Utilized Git for
+        version control and participated in regular code reviews to ensure code
+        quality and adherence to best practices.
       </p>
     </div>
     <footer class="px-5 p-3">
@@ -158,13 +158,29 @@
           <img src="./Assets/icons8-twitterx-60.png" alt="" height="39rem" />
         </a>
       </div>
+      <div class="desktopDisplay">
+        <p style="margin: 0">
+          No &copy copyright issues.Feel free to copy.If you need any help, ping
+          me!
+        </p>
+        <p style="margin: 0">Made with ❤️ in India</p>
+      </div>
       <a
         href="
-        https://plum-philomena-18.tiiny.site"
+      https://plum-philomena-18.tiiny.site"
         target="_blank"
+        style="align-self: flex-start"
         >RESUME</a
       >
+      <div class="mobileDisplay">
+        <p style="margin: 0">
+          No &copy copyright issues. Feel free to copy. If you need any help,
+          ping me !
+        </p>
+        <p style="margin: 0">Made with ❤️ in India</p>
+      </div>
     </footer>
+   
     <script src="./index.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
