--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
         position: sticky;
         top: 0px;
         z-index: 3;
-        background-color: rgb(42, 40, 40);
+        background-color: black
       "
     >
       <div class="navbar-brand d-flex">
