--- a/about.html
+++ b/about.html
@@ -67,6 +67,8 @@
       </div>
     </nav>
     <div class="container" id="contentContainer">
+     
+
       <header class="mt-5">ABOUT</header>
       <p class="mt-5 mb-3">Hi, I'm Gajanan Bodhankar.</p>
       <p>
@@ -139,9 +141,7 @@
       </div>
     </footer>
 
-    <script src="./index.js">
-     
-    </script>
+    <script src="./index.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   </body>
