Added a new project

--- a/projects.html
+++ b/projects.html
@@ -141,6 +141,21 @@
         version control and participated in regular code reviews to ensure code
         quality and adherence to best practices.
       </p>
+      <a href="https://blogbreeze-frontend.vercel.app/" class="projectTitle"
+        >BLOGBREEZE</a
+      >
+      <p>
+       BlogBreeze - the ultimate coding companion for
+        developers!
+        Discover, Create, and Connect: With BlogBreeze,
+        developers can explore a vast array of coding blogs, manage their own
+        posts, and curate a collection of favorites, all within a single
+        platform. Dive into the world of coding and unleash your creativity like
+        never before! Seamlessly Share Your Insights: BlogBreeze empowers
+        developers to share their knowledge and expertise with the community.
+        Upload your own posts, engage with like-minded developers, and elevate
+        your coding journey to new heights.
+      </p>
     </div>
     <footer class="px-5 p-3">
       <div class="imagesDiv">
@@ -180,7 +195,7 @@
         <p style="margin: 0">Made with ❤️ in India</p>
       </div>
     </footer>
-   
+
     <script src="./index.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
