--- a/projects.html
+++ b/projects.html
@@ -145,16 +145,14 @@
         >BLOGBREEZE</a
       >
       <p>
-       BlogBreeze - the ultimate coding companion for
-        developers!
-        Discover, Create, and Connect: With BlogBreeze,
-        developers can explore a vast array of coding blogs, manage their own
-        posts, and curate a collection of favorites, all within a single
-        platform. Dive into the world of coding and unleash your creativity like
-        never before! Seamlessly Share Your Insights: BlogBreeze empowers
-        developers to share their knowledge and expertise with the community.
-        Upload your own posts, engage with like-minded developers, and elevate
-        your coding journey to new heights.
+        BlogBreeze - the ultimate coding companion for developers! Discover,
+        Create, and Connect: With BlogBreeze, developers can explore a vast
+        array of coding blogs, manage their own posts, and curate a collection
+        of favorites, all within a single platform. Dive into the world of
+        coding and unleash your creativity like never before! Seamlessly Share
+        Your Insights: BlogBreeze empowers developers to share their knowledge
+        and expertise with the community. Upload your own posts, engage with
+        like-minded developers, and elevate your coding journey to new heights.
       </p>
     </div>
     <footer class="px-5 p-3">
@@ -182,7 +180,7 @@
       </div>
       <a
         href="
-        https://drive.google.com/file/d/1865O63_RoWxYXegoGJUXf9fcWmgYr-OZ/view?pli=1"
+        https://drive.google.com/file/d/1-ueqWcVjnL4yFNs94GQEAxddColl3mMr/view"
         target="_blank"
         style="align-self: flex-start"
         >RESUME</a
