--- a/projects.html
+++ b/projects.html
@@ -57,103 +57,170 @@
         </ul>
       </div>
     </nav>
-    <div class="container" id="contentContainer">
-      <header class="mt-5">PROJECTS</header>
-      <p class="mt-5">
-        I've worked on many types of projects both personal and professional.
-        Here are some of the projects that I've worked on.
-      </p>
-      <a
-        href="https://text-utils-react-js-git-main-gajananbodhankar.vercel.app/"
-        target="_blank"
-        class="projectTitle"
-        >TEXTUTILS</a
-      >
-      <p>
-        Created with passion for enhancing your text-related tasks, TextUtils is
-        designed to be your one-stop digital toolkit for all things textual.
-        Build with ReactJS library and Bootstrap for styling.
-      </p>
-      <p style="font-size: x-large; margin-bottom: 5px">
-        QTRIP
+    <div
+      class="p-3"
+      style="
+        gap: 1rem;
+        align-items: stretch;
+        display: flex;
+        justify-content: space-between;
+      "
+    >
+      <div class="container projectsContainer" id="contentContainer">
+        <header class="mt-5">PROJECTS</header>
+        <p class="mt-5">
+          I've worked on a wide range of both personal and business projects.
+          These are a few of the projects I've been involved in.
+        </p>
         <a
-          href="https://gajanan-qtrip.netlify.app/"
-          class="projectTitle"
-          target="_blank"
-          style="font-size: large"
-        >
-          Static
-        </a>
-        <a
-          href="https://qtrip-dynamic-one-chi.vercel.app/"
+          href="https://text-utils-react-js-git-main-gajananbodhankar.vercel.app/"
           target="_blank"
           class="projectTitle"
-          style="font-size: large"
-          >Dynamic</a
+          >TEXTUTILS</a
         >
-      </p>
-      <p>
-        A SEO friendly travel website made using HTML, CSS, BootStrap and
-        JavaScript that can be used to browse different cities and adventures
-        and make reservations. Improved UI/UX with multi-select filters, forms,
-        image carousels and conditional rendering of page elements. Utilized
-        local storage to persist user preference at client-side and facilitated
-        reservation form submission using fetch API. with more features and
-        enhancements.
-      </p>
-      <a
-        class="projectTitle"
-        target="_blank"
-        href="https://bodhankargajanan99-me-qkart-frontend-v2.vercel.app/"
-        >QKART FRONTEND</a
-      >
-      <p>
-        Implemented the core logic for authentication, shopping cart, and
-        checkout of an E-commerce application with popping messages using
-        notistack snackbar. Improved UI by adding responsive design elements for
-        a uniform experience across different devices.Utilized REST APIs to load
-        and render data served by the backend server.Loading the products, add
-        to cart, and checkout page as per authorization with search bar using
-        debouncing.
-      </p>
+        <p>
+          Created with passion for enhancing your text-related tasks, TextUtils
+          is designed to be your one-stop digital toolkit for all things
+          textual. Build with ReactJS library and Bootstrap for styling.
+        </p>
+        <p style="font-size: x-large; margin-bottom: 5px">
+          QTRIP
+          <a
+            href="https://gajanan-qtrip.netlify.app/"
+            class="projectTitle"
+            target="_blank"
+            style="font-size: large"
+          >
+            Static
+          </a>
+          <a
+            href="https://qtrip-dynamic-one-chi.vercel.app/"
+            target="_blank"
+            class="projectTitle"
+            style="font-size: large"
+            >Dynamic</a
+          >
+        </p>
+        <p>
+          A SEO friendly travel website made using HTML, CSS, BootStrap and
+          JavaScript that can be used to browse different cities and adventures
+          and make reservations. Improved UI/UX with multi-select filters,
+          forms, image carousels and conditional rendering of page elements.
+          Utilized local storage to persist user preference at client-side and
+          facilitated reservation form submission using fetch API. with more
+          features and enhancements.
+        </p>
+        <a
+          class="projectTitle"
+          target="_blank"
+          href="https://bodhankargajanan99-me-qkart-frontend-v2.vercel.app/"
+          >QKART FRONTEND</a
+        >
+        <p>
+          Implemented the core logic for authentication, shopping cart, and
+          checkout of an E-commerce application with popping messages using
+          notistack snackbar. Improved UI by adding responsive design elements
+          for a uniform experience across different devices.Utilized REST APIs
+          to load and render data served by the backend server.Loading the
+          products, add to cart, and checkout page as per authorization with
+          search bar using debouncing.
+        </p>
 
-      <a
-        href="https://github.com/GajananBodhankar/E-Commerce-Application"
-        class="projectTitle"
-        target="_blank"
-        >E-COMMERCE FOR ANDROID</a
-      >
-      <p>
-        Developed a React Native E - commerce app with user authentication
         <a
-          href="https://fakestoreapi.com/docs"
+          href="https://github.com/GajananBodhankar/E-Commerce-Application"
           class="projectTitle"
-          style="font-size: large"
           target="_blank"
-          >credentials</a
+          >E-COMMERCE FOR ANDROID</a
         >
-        , utilizing Axios for API calls and Redux for state management. Designed
-        Home screen with dynamic categories, search filters, and view all
-        feature, optimizing user product exploration. Implemented efficient
-        navigation to Product details, allowing users to add items to the cart
-        seamlessly.Utilized Flatlist for list optimization in various screens,
-        contributing to enhanced application performance.Utilized Git for
-        version control and participated in regular code reviews to ensure code
-        quality and adherence to best practices.
-      </p>
-      <a href="https://blogbreeze-frontend.vercel.app/" class="projectTitle"
-        >BLOGBREEZE</a
-      >
-      <p>
-        BlogBreeze - the ultimate coding companion for developers! Discover,
-        Create, and Connect: With BlogBreeze, developers can explore a vast
-        array of coding blogs, manage their own posts, and curate a collection
-        of favorites, all within a single platform. Dive into the world of
-        coding and unleash your creativity like never before! Seamlessly Share
-        Your Insights: BlogBreeze empowers developers to share their knowledge
-        and expertise with the community. Upload your own posts, engage with
-        like-minded developers, and elevate your coding journey to new heights.
-      </p>
+        <p>
+          Developed a React Native E - commerce app with user authentication
+          <a
+            href="https://fakestoreapi.com/docs"
+            class="projectTitle"
+            style="font-size: large"
+            target="_blank"
+            >credentials</a
+          >
+          , utilizing Axios for API calls and Redux for state management.
+          Designed Home screen with dynamic categories, search filters, and view
+          all feature, optimizing user product exploration. Implemented
+          efficient navigation to Product details, allowing users to add items
+          to the cart seamlessly.Utilized Flatlist for list optimization in
+          various screens, contributing to enhanced application
+          performance.Utilized Git for version control and participated in
+          regular code reviews to ensure code quality and adherence to best
+          practices.
+        </p>
+        <a href="https://blogbreeze-frontend.vercel.app/" class="projectTitle"
+          >BLOGBREEZE</a
+        >
+        <p>
+          BlogBreeze - the ultimate coding companion for developers! Discover,
+          Create, and Connect: With BlogBreeze, developers can explore a vast
+          array of coding blogs, manage their own posts, and curate a collection
+          of favorites, all within a single platform. Dive into the world of
+          coding and unleash your creativity like never before! Seamlessly Share
+          Your Insights: BlogBreeze empowers developers to share their knowledge
+          and expertise with the community. Upload your own posts, engage with
+          like-minded developers, and elevate your coding journey to new
+          heights.
+        </p>
+      </div>
+      <div class="bg-secondary" style="width: 1px"></div>
+      <div class="container pr-5" style="width: min-content">
+        <header class="mt-5">SKILLS</header>
+        <p style="font-size: x-large; margin: 2rem 0px"><b>Front-end</b></p>
+        <div class="d-flex align-items-center mb-3" style="gap: 1rem">
+          <img src="./Assets/htmlIcon.png" alt="Html logo" />
+          <img src="./Assets/css.png" alt="Css logo" />
+          <img src="./Assets/icons8-javascript-48.png" alt="JS logo" />
+          <img src="./Assets/icons8-bootstrap-48.png" alt="" srcset="" />
+          <img src="./Assets/icons8-tailwind-css-48.png" alt="" srcset="" />
+          <img src="./Assets/icons8-vite-logo-48.png" alt="" />
+          <img src="./Assets/icons8-react-js-48.png" alt="" />
+          <img
+            src="./Assets/Microsoft.VisualStudio.Services.Icons.Default"
+            style="width: 7%"
+            alt=""
+            srcset=""
+          />
+          <img
+            src="./Assets/png-transparent-material-ui-logo.png"
+            style="width: 7%"
+            alt=""
+          />
+        </div>
+        <p style="font-size: x-large; margin: 2rem 0px"><b>Back-end</b></p>
+        <div class="d-flex align-items-center mb-3" style="gap: 1rem">
+          <img
+            src="./Assets/icons8-nodejs-48.png"
+            alt=""
+            style="width: 10%; height: auto"
+          />
+          <img src="./Assets/icons8-express-js-64.png" width="7%" alt="" />
+        </div>
+        <p style="font-size: x-large; margin: 2rem 0px"><b>Database</b></p>
+        <div class="d-flex align-items-center mb-3" style="gap: 1rem">
+          <img src="./Assets/icons8-mongo-db-48.png" alt="" /><img
+            src="./Assets/icons8-my-sql-48.png"
+            alt=""
+          />
+        </div>
+        <p style="font-size: x-large; margin: 2rem 0px"><b>Mobile</b></p>
+        <div class="d-flex align-items-center mb-3" style="gap: 1rem">
+          <img src="./Assets/What-Is-React-Native.png" width="20%" alt="" />
+        </div>
+        <p style="font-size: x-large; margin: 2rem 0px"><b>Tools</b></p>
+        <div class="d-flex align-items-center mb-3" style="gap: 2rem">
+          <img src="./Assets/gitlab.png" width="8%" alt="" />
+          <img src="./Assets/github-ij3K0OZj.png" width="8%" alt="" />
+          <img src="./Assets/vscode-DyPKvY-r.png" width="8%" alt="" />
+          <img src="./Assets/icons8-android-studio-48.png" width="8%" alt="" />
+          <img src="./Assets/icons8-xcode-48.png" width="8%" alt="" />
+          <img src="./Assets/npm.png" width="8%" alt="" />
+          <img src="./Assets/icons8-figma-48.png" width="8%" alt="" />
+        </div>
+      </div>
     </div>
     <footer class="px-5 p-3">
       <div class="imagesDiv">
