--- a/projects.html
+++ b/projects.html
@@ -64,6 +64,7 @@
         align-items: stretch;
         display: flex;
         justify-content: space-between;
+        position: relative;
       "
     >
       <div class="container projectsContainer" id="contentContainer">
