--- a/projects.html
+++ b/projects.html
@@ -58,13 +58,12 @@
       </div>
     </nav>
     <div
-      class="p-3"
+      class="p-3 projectSkillMaincontainer"
       style="
         gap: 1rem;
         align-items: stretch;
         display: flex;
         justify-content: space-between;
-        position: relative;
       "
     >
       <div class="container projectsContainer" id="contentContainer">
@@ -168,58 +167,64 @@
         </p>
       </div>
       <div class="bg-secondary" style="width: 1px"></div>
-      <div class="container pr-5" style="width: min-content">
-        <header class="mt-5">SKILLS</header>
-        <p style="font-size: x-large; margin: 2rem 0px"><b>Front-end</b></p>
-        <div class="d-flex align-items-center mb-3" style="gap: 1rem">
-          <img src="./Assets/htmlIcon.png" alt="Html logo" />
-          <img src="./Assets/css.png" alt="Css logo" />
-          <img src="./Assets/icons8-javascript-48.png" alt="JS logo" />
-          <img src="./Assets/icons8-bootstrap-48.png" alt="" srcset="" />
-          <img src="./Assets/icons8-tailwind-css-48.png" alt="" srcset="" />
-          <img src="./Assets/icons8-vite-logo-48.png" alt="" />
-          <img src="./Assets/icons8-react-js-48.png" alt="" />
-          <img
-            src="./Assets/Microsoft.VisualStudio.Services.Icons.Default"
-            style="width: 7%"
-            alt=""
-            srcset=""
-          />
-          <img
-            src="./Assets/png-transparent-material-ui-logo.png"
-            style="width: 7%"
-            alt=""
-          />
-        </div>
-        <p style="font-size: x-large; margin: 2rem 0px"><b>Back-end</b></p>
-        <div class="d-flex align-items-center mb-3" style="gap: 1rem">
-          <img
-            src="./Assets/icons8-nodejs-48.png"
-            alt=""
-            style="width: 10%; height: auto"
-          />
-          <img src="./Assets/icons8-express-js-64.png" width="7%" alt="" />
-        </div>
-        <p style="font-size: x-large; margin: 2rem 0px"><b>Database</b></p>
-        <div class="d-flex align-items-center mb-3" style="gap: 1rem">
-          <img src="./Assets/icons8-mongo-db-48.png" alt="" /><img
-            src="./Assets/icons8-my-sql-48.png"
-            alt=""
-          />
-        </div>
-        <p style="font-size: x-large; margin: 2rem 0px"><b>Mobile</b></p>
-        <div class="d-flex align-items-center mb-3" style="gap: 1rem">
-          <img src="./Assets/What-Is-React-Native.png" width="20%" alt="" />
-        </div>
-        <p style="font-size: x-large; margin: 2rem 0px"><b>Tools</b></p>
-        <div class="d-flex align-items-center mb-3" style="gap: 2rem">
-          <img src="./Assets/gitlab.png" width="8%" alt="" />
-          <img src="./Assets/github-ij3K0OZj.png" width="8%" alt="" />
-          <img src="./Assets/vscode-DyPKvY-r.png" width="8%" alt="" />
-          <img src="./Assets/icons8-android-studio-48.png" width="8%" alt="" />
-          <img src="./Assets/icons8-xcode-48.png" width="8%" alt="" />
-          <img src="./Assets/npm.png" width="8%" alt="" />
-          <img src="./Assets/icons8-figma-48.png" width="8%" alt="" />
+      <div class="container" style="width: auto">
+        <div style="position: sticky; top: 0px">
+          <header class="mt-5">SKILLS</header>
+          <p style="font-size: x-large; margin: 2rem 0px"><b>Front-end</b></p>
+          <div class="d-flex align-items-center mb-3" style="gap: 1rem;flex-wrap: wrap;">
+            <img src="./Assets/htmlIcon.png" width="8%" alt="Html logo" />
+            <img src="./Assets/css.png" width="8%" alt="Css logo" />
+            <img src="./Assets/icons8-javascript-48.png" width="8%" alt="JS logo" />
+            <img src="./Assets/icons8-bootstrap-48.png" width="8%" alt="" srcset="" />
+            <img src="./Assets/icons8-tailwind-css-48.png width="8%"" alt="" srcset="" />
+            <img src="./Assets/icons8-vite-logo-48.png" width="8%" alt="" />
+            <img src="./Assets/icons8-react-js-48.png" width="8%" alt="" />
+            <img
+              src="./Assets/Microsoft.VisualStudio.Services.Icons.Default"
+              style="width: 7%"
+              alt=""
+              srcset=""
+            />
+            <img
+              src="./Assets/png-transparent-material-ui-logo.png"
+              style="width: 7%"
+              alt=""
+            />
+          </div>
+          <p style="font-size: x-large; margin: 2rem 0px"><b>Back-end</b></p>
+          <div class="d-flex align-items-center mb-3" style="gap: 1rem">
+            <img
+              src="./Assets/icons8-nodejs-48.png"
+              alt=""
+              style="width: 10%; height: auto"
+            />
+            <img src="./Assets/icons8-express-js-64.png" width="7%" alt="" />
+          </div>
+          <p style="font-size: x-large; margin: 2rem 0px"><b>Database</b></p>
+          <div class="d-flex align-items-center mb-3" style="gap: 1rem">
+            <img src="./Assets/icons8-mongo-db-48.png" alt="" /><img
+              src="./Assets/icons8-my-sql-48.png"
+              alt=""
+            />
+          </div>
+          <p style="font-size: x-large; margin: 2rem 0px"><b>Mobile</b></p>
+          <div class="d-flex align-items-center mb-3" style="gap: 1rem">
+            <img src="./Assets/What-Is-React-Native.png" width="20%" alt="" />
+          </div>
+          <p style="font-size: x-large; margin: 2rem 0px"><b>Tools</b></p>
+          <div class="d-flex align-items-center mb-3" style="gap: 2rem;flex-wrap: wrap;">
+            <img src="./Assets/gitlab.png" width="8%" alt="" />
+            <img src="./Assets/github-ij3K0OZj.png" width="8%" alt="" />
+            <img src="./Assets/vscode-DyPKvY-r.png" width="8%" alt="" />
+            <img
+              src="./Assets/icons8-android-studio-48.png"
+              width="8%"
+              alt=""
+            />
+            <img src="./Assets/icons8-xcode-48.png" width="8%" alt="" />
+            <img src="./Assets/npm.png" width="8%" alt="" />
+            <img src="./Assets/icons8-figma-48.png" width="8%" alt="" />
+          </div>
         </div>
       </div>
     </div>
