--- a/projects.html
+++ b/projects.html
@@ -181,13 +181,13 @@
             <img src="./Assets/icons8-react-js-48.png" width="8%" alt="" />
             <img
               src="./Assets/Microsoft.VisualStudio.Services.Icons.Default"
-              style="width: 7%"
+              style="width: 8%"
               alt=""
               srcset=""
             />
             <img
               src="./Assets/png-transparent-material-ui-logo.png"
-              style="width: 7%"
+              style="width: 8%"
               alt=""
             />
           </div>
@@ -202,8 +202,8 @@
           </div>
           <p style="font-size: x-large; margin: 2rem 0px"><b>Database</b></p>
           <div class="d-flex align-items-center mb-3" style="gap: 1rem">
-            <img src="./Assets/icons8-mongo-db-48.png" alt="" /><img
-              src="./Assets/icons8-my-sql-48.png"
+            <img src="./Assets/icons8-mongo-db-48.png" alt="" width="10%" /><img
+              src="./Assets/icons8-my-sql-48.png" width="10%"
               alt=""
             />
           </div>
