--- a/projects.html
+++ b/projects.html
@@ -169,7 +169,7 @@
       <div class="bg-secondary" style="width: 1px"></div>
       <div class="container" style="width: auto">
         <div style="position: sticky; top: 0px">
-          <header class="mt-5">SKILLS</header>
+          <header class="mt-5 skills">SKILLS</header>
           <p style="font-size: x-large; margin: 2rem 0px"><b>Front-end</b></p>
           <div class="d-flex align-items-center mb-3" style="gap: 1rem;flex-wrap: wrap;">
             <img src="./Assets/htmlIcon.png" width="8%" alt="Html logo" />
