--- a/about.html
+++ b/about.html
@@ -71,9 +71,15 @@
       <p class="mt-5 mb-3">Hi, I'm Gajanan Bodhankar.</p>
       <p>
         I'm an enthusiastic Full-stack Developer, and professionally a Web
-        Development Engineer with few months of experience in
+        Development Engineer with 1+ year of experience in
         <a style="color: red" href="https://reactnative.dev/" target="_blank"
           >React-Native</a
+        > currently working as Software Developer in
+        <a
+          href="https://hexagon.com/company/careers/capability-centre-india"
+          target="_blank"
+          style="color: red"
+          >Hexagon Manufacturing Intelligence</a
         >
         from Hyderabad, India and and a huge fan of Single Page Applications
         (SPAs), React JS and frameworks built around it. I work on every project
