--- a/projects.html
+++ b/projects.html
@@ -165,18 +165,46 @@
           like-minded developers, and elevate your coding journey to new
           heights.
         </p>
+        <i>
+          <mark>Note :</mark> These projects are hosted on a
+          <span style="text-decoration: underline">free</span> instance of
+          <a
+            href="https://dashboard.render.com/"
+            target="_blank"
+            class="projectTitle"
+            style="
+              font-family: 'Courier New', Courier, monospace;
+              font-size: large;
+            "
+            >Render</a
+          >
+          which might take a while to load.</i
+        >
       </div>
       <div class="bg-secondary" style="width: 1px"></div>
       <div class="container" style="width: auto">
         <div style="position: sticky; top: 0px">
           <header class="mt-5 skills">SKILLS</header>
           <p style="font-size: x-large; margin: 2rem 0px"><b>Front-end</b></p>
-          <div class="d-flex align-items-center mb-3" style="gap: 1rem;flex-wrap: wrap;">
+          <div
+            class="d-flex align-items-center mb-3"
+            style="gap: 1rem; flex-wrap: wrap"
+          >
             <img src="./Assets/htmlIcon.png" width="8%" alt="Html logo" />
             <img src="./Assets/css.png" width="8%" alt="Css logo" />
-            <img src="./Assets/icons8-javascript-48.png" width="8%" alt="JS logo" />
-            <img src="./Assets/icons8-bootstrap-48.png" width="8%" alt="" srcset="" />
-            <img src="./Assets/icons8-tailwind-css-48.png width="8%"" alt="" srcset="" />
+            <img
+              src="./Assets/icons8-javascript-48.png"
+              width="8%"
+              alt="JS logo"
+            />
+            <img
+              src="./Assets/icons8-bootstrap-48.png"
+              width="8%"
+              alt=""
+              srcset=""
+            />
+            <img src="./Assets/icons8-tailwind-css-48.png width="8%"" alt=""
+            srcset="" />
             <img src="./Assets/icons8-vite-logo-48.png" width="8%" alt="" />
             <img src="./Assets/icons8-react-js-48.png" width="8%" alt="" />
             <img
@@ -203,7 +231,8 @@
           <p style="font-size: x-large; margin: 2rem 0px"><b>Database</b></p>
           <div class="d-flex align-items-center mb-3" style="gap: 1rem">
             <img src="./Assets/icons8-mongo-db-48.png" alt="" width="10%" /><img
-              src="./Assets/icons8-my-sql-48.png" width="10%"
+              src="./Assets/icons8-my-sql-48.png"
+              width="10%"
               alt=""
             />
           </div>
@@ -212,7 +241,10 @@
             <img src="./Assets/What-Is-React-Native.png" width="20%" alt="" />
           </div>
           <p style="font-size: x-large; margin: 2rem 0px"><b>Tools</b></p>
-          <div class="d-flex align-items-center mb-3" style="gap: 2rem;flex-wrap: wrap;">
+          <div
+            class="d-flex align-items-center mb-3"
+            style="gap: 2rem; flex-wrap: wrap"
+          >
             <img src="./Assets/gitlab.png" width="8%" alt="" />
             <img src="./Assets/github-ij3K0OZj.png" width="8%" alt="" />
             <img src="./Assets/vscode-DyPKvY-r.png" width="8%" alt="" />
