--- a/projects.html
+++ b/projects.html
@@ -127,7 +127,7 @@
         </p>
 
         <a
-          href="https://github.com/GajananBodhankar/E-Commerce-Application"
+          href="https://github.com/GajananBodhankar/E-Commerce-Application-React-Native.git"
           class="projectTitle"
           target="_blank"
           >E-COMMERCE FOR ANDROID</a
@@ -190,9 +190,10 @@
             class="d-flex align-items-center mb-3"
             style="gap: 1rem; flex-wrap: wrap"
           >
-            <img src="./Assets/htmlIcon.png" width="8%" alt="Html logo" />
-            <img src="./Assets/css.png" width="8%" alt="Css logo" />
+            <img class="logos" src="./Assets/htmlIcon.png" width="8%" alt="Html logo" />
+            <img class="logos" src="./Assets/css.png" width="8%" alt="Css logo" />
             <img
+            class="logos"
               src="./Assets/icons8-javascript-48.png"
               width="8%"
               alt="JS logo"
@@ -200,62 +201,60 @@
             <img
               src="./Assets/icons8-bootstrap-48.png"
               width="8%"
-              alt=""
-              srcset=""
+              class="logos"
             />
-            <img src="./Assets/icons8-tailwind-css-48.png width="8%"" alt=""
+            <img src="./Assets/icons8-tailwind-css-48.png width="8%" class="logos"class="logos" alt=""
             srcset="" />
-            <img src="./Assets/icons8-vite-logo-48.png" width="8%" alt="" />
-            <img src="./Assets/icons8-react-js-48.png" width="8%" alt="" />
+            <img src="./Assets/icons8-vite-logo-48.png" width="8%"class="logos" alt="" />
+            <img src="./Assets/icons8-react-js-48.png" width="8%"class="logos" alt="" />
             <img
               src="./Assets/Microsoft.VisualStudio.Services.Icons.Default"
               style="width: 8%"
-              alt=""
-              srcset=""
+             class="logos"
             />
             <img
               src="./Assets/png-transparent-material-ui-logo.png"
               style="width: 8%"
-              alt=""
+              class="logos"
             />
           </div>
           <p style="font-size: x-large; margin: 2rem 0px"><b>Back-end</b></p>
           <div class="d-flex align-items-center mb-3" style="gap: 1rem">
             <img
               src="./Assets/icons8-nodejs-48.png"
-              alt=""
+              class="logos"
               style="width: 10%; height: auto"
             />
-            <img src="./Assets/icons8-express-js-64.png" width="7%" alt="" />
+            <img src="./Assets/icons8-express-js-64.png" width="7%" class="logos" />
           </div>
           <p style="font-size: x-large; margin: 2rem 0px"><b>Database</b></p>
           <div class="d-flex align-items-center mb-3" style="gap: 1rem">
-            <img src="./Assets/icons8-mongo-db-48.png" alt="" width="10%" /><img
+            <img src="./Assets/icons8-mongo-db-48.png" class="logos"class="logos" width="10%" /><img
               src="./Assets/icons8-my-sql-48.png"
               width="10%"
-              alt=""
+             class="logos"
             />
           </div>
           <p style="font-size: x-large; margin: 2rem 0px"><b>Mobile</b></p>
           <div class="d-flex align-items-center mb-3" style="gap: 1rem">
-            <img src="./Assets/What-Is-React-Native.png" width="20%" alt="" />
+            <img src="./Assets/What-Is-React-Native.png" width="15%" class="logos" />
           </div>
           <p style="font-size: x-large; margin: 2rem 0px"><b>Tools</b></p>
           <div
             class="d-flex align-items-center mb-3"
             style="gap: 2rem; flex-wrap: wrap"
           >
-            <img src="./Assets/gitlab.png" width="8%" alt="" />
-            <img src="./Assets/github-ij3K0OZj.png" width="8%" alt="" />
-            <img src="./Assets/vscode-DyPKvY-r.png" width="8%" alt="" />
+            <img src="./Assets/gitlab.png" width="8%"class="logos" />
+            <img src="./Assets/github-ij3K0OZj.png" width="8%"class="logos" />
+            <img src="./Assets/vscode-DyPKvY-r.png" width="8%" class="logos"/>
             <img
               src="./Assets/icons8-android-studio-48.png"
               width="8%"
-              alt=""
+              class="logos"
             />
-            <img src="./Assets/icons8-xcode-48.png" width="8%" alt="" />
-            <img src="./Assets/npm.png" width="8%" alt="" />
-            <img src="./Assets/icons8-figma-48.png" width="8%" alt="" />
+            <img src="./Assets/icons8-xcode-48.png" width="8%" class="logos" />
+            <img src="./Assets/npm.png" width="8%" class="logos" />
+            <img src="./Assets/icons8-figma-48.png" width="8%" class="logos" />
           </div>
         </div>
       </div>
